  =state.hamiltonians[positions]+=tensor=. Previously, the program will throw error saying hamiltonian term has already
  been set, but recently, some models need adding term on the same positions.
*** Deprecated
*** Removed
+ *tetragono*: Remove ansatz product state support, which may be added again in the future, but it require many updates.
*** Fixed

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.7...v0.3.9][v0.3.9]] - 2023-09-07

*** Changed
+ *tetragono*: The interface of =save_result= allow only =(state, result, whole_result)= now.
+ *TAT.hpp*: Change the view of sign problem in =conjugate=, there is only one conjugate, but the trivial metric may not
  be positive definite, so in gradient descent, this negative metric term need to be considered, the optional paramter
  =trivial_metric= is used to apply the trivial metric when conjugating.
+ *TAT.py*: Update the new interface of =conjugate=.
+ *TAT.py*: Use customized string stream in =TAT.py= to avoid a duplicated copy of string.
+ *TAT.hpp*: Check the larger tensor to try to fit the common edges in contract, if not proper, check the other one. The
  previous behavior always check tensor 1 firstly and check tensor 2 secondly.
+ *scalapack.py*: Change the loader API. The previous way is =from PyScalapack import Scalapack= and using
  =Scalapack("libscalapack.so")= to get the scalapack object, Now user should use =import PyScalapack= and
  =PyScalapack("libscalapack.so")= directly.
*** Removed
+ *TAT.hpp*: Remove deprecated tensor member function =get_rank=, =find_rank_from_name= and =get_rank_from_name=.
*** Fixed
+ *TAT.hpp*: Fix a bug about parity sign when =merge_map= is empty.
+ *TAT.hpp*: Fix invalid access to a empty =vector= when splitting the first edge into zero edges.
+ *TAT.hpp*: Fix out of range pointer error when try to split a trivial edge ={{Symmetry(), 1}}= to no edge, or merge no
  edge into a trivial edge.